# another-s3-manager

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.release  LICENSE  PUBLISHING.md  README.md  auth.py  config.json.example  config.py  constants.py  docker-compose-demo.yml  docker-compose.example.yml  docker-compose.minio.yml  docker-compose.ministack.yml  docker-compose.override.example.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  s3_client.py  users.py  utils.py
.github/: description.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: extract_changelog.py
.github/workflows/: ci.yml  docker-build.yml  release.yml
demo/: config.minio.json  nginx.conf
docker/: docker-compose.minio.yml  docker-compose.ministack.yml  docker-compose.observability.yml
docker/observability/: prometheus.yml
docs/: accessibility.md  grafana-dashboard.json  mcp-setup.md  observability.md  testing-backends.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  setupTests.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  35173f08b83b_add_password_set_via_to_users.py  63c8a9adb455_reuse_revoked_token_names_via_partial_.py  6e601cabdb60_drop_tour_seen_v1.py  7cd668620249_add_must_change_password_to_users.py  (+4 more)
scripts/: upgrade-smoke.sh
static/: admin.html  login.html  script.js  style.css
tests/: conftest.py  test_admin_password_sync.py  test_api_tokens.py  test_auth.py  test_config.py  test_config_ttl.py  test_constants.py  test_database.py  test_default_role.py  test_errors.py  test_event_loop_offload.py  test_extract_changelog.py  test_first_login_password.py  test_grafana_dashboard.py  test_logging_setup.py  test_main.py  test_main_import.py  test_main_logic.py  test_mcp_annotations.py  test_mcp_auth.py  test_mcp_bucket_summary.py  test_mcp_list_files_paging.py  test_mcp_protocol.py  test_mcp_read_file.py  test_mcp_tool_docstrings.py  test_mcp_tools.py  test_mcp_unknown_role.py  test_mcp_upload_guard.py  test_metrics.py  test_migration.py  test_migrations.py  test_models.py  test_pagination_v2.py  test_password_policy.py  test_password_provenance.py  test_prefix_search.py  test_rate_limit.py  test_reset_admin_password.py  test_routes_via_moto.py  test_s3_client.py  (+6 more)
(+314 files in other folders)
